Remove MessageBodyReader from the Client
Change to use Client.target(URI) to be JAX-RS 1.0 compliant.